horizontal scroll issue fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,7 @@
   padding-left: 42px;
 }
 .col-padding-right{
-  padding-right: 40px !important;
+  padding-right: 42px !important;
 }
 
 .padding-right{
@@ -244,6 +244,9 @@ h5{
   height: 50px;
 }
 
+.overflow-hidden{
+  overflow: hidden;
+}
 /* .left-line {
   border-left: 0.5px solid #e5e5e7;
 } */
